Added myself as an author

--- a/AUTHORS
+++ b/AUTHORS
@@ -508,6 +508,7 @@ Jon Hester <jon.d.hester@gmail.com>
 Jon Madison <jon@tfftech.com>
 Jon Scott Clark <jonscottclark@gmail.com>
 Jon Tewksbury <jontewks@gmail.com>
+Jonathan Bluks <jbluks@brainstation.io>
 Jonas Enlund <jonas.enlund@gmail.com>
 Jonas Gebhardt <jonas@instagram.com>
 Jonathan Hsu <jhiswin@gmail.com>
